<resources>
    <string name="app_name">eTracking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello</string>
    <string name="nav_header_subtitle">%1$s</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_trip_details">Trip Details</string>
    <string name="menu_delivery_details">Delivery Details</string>
    <string name="menu_trip_status">Trip Status</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about_us">About us</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="msg_please_wait">Please wait</string>
    <string name="menu_delivery_note_details">Delivery Note Details</string>
    <string name="select">Select</string>
    <string name="tripDate">Trip Date</string>
    <string name="search">Search</string>
    <string name="reset">Reset</string>
    <string name="no_items">No items Available</string>
    <string name="tid">TID</string>
    <string name="tripNumber">Trip Number</string>
    <string name="vehicle_id">Vehicle Id</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="driver_id">Driver Id</string>
    <string name="driver_name">Driver Name</string>
    <string name="id">ID</string>
    <string name="delivey_id">Delivery ID</string>
    <string name="cust_acc_id">Customer Account ID</string>
    <string name="cust_acc_num">Customer Account Number</string>
    <string name="cust_name">Customer Name</string>
    <string name="item_code">Item Code</string>
    <string name="item_desc">Item Description</string>
    <string name="uom">UOM</string>
    <string name="del_qty">Delivery Quantity</string>
    <string name="menu_trip_customers">Trip Customers</string>
    <string name="menu_outfordelivery">Out for Delivery</string>
    <string name="update_status">Update Status</string>
    <string name="menu_scan">Scan barcodes</string>
    <string name="menu_loading">Loading</string>
    <string name="details">Details</string>
    <string name="menu_delivery_customer">Delivery to Customer</string>
    <string name="menu_confirm_delivery_customer">Confirm Delivery to Customer</string>

</resources>
