<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_trip_details"
            android:icon="@drawable/ic_truck"
            android:title="@string/menu_trip_details" />
        <item
            android:id="@+id/nav_delivery_details"
            android:icon="@drawable/ic_delivery"
            android:title="@string/menu_delivery_details" />
        <item
            android:id="@+id/nav_trip_status"
            android:icon="@drawable/ic_trip_status"
            android:title="@string/menu_trip_status" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_aboutus"
                android:title="@string/menu_about_us" />
        </menu>
    </item>

</menu>
