<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <Button
        android:id="@+id/tripDetailsBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"

        android:text="@string/menu_trip_details"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deliveryNoteBtn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:text="@string/menu_delivery_note_details"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@id/statusBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tripDetailsBtn"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/statusBtn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:text="@string/menu_trip_status"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/deliveryNoteBtn"
        app:layout_constraintStart_toEndOf="@+id/deliveryNoteBtn"
        app:layout_constraintTop_toTopOf="@id/deliveryNoteBtn"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>