<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/action_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/airtruck"


       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/action_image"

        >
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:id="@+id/username"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxBackgroundColor="@android:color/white"
        app:boxStrokeColor="@color/colorPrimary"

        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:imeOptions="actionNext"
            android:lines="1"
            android:maxLines="1"
            android:inputType="text"


            android:drawableStart="@drawable/ic_account_circle_24px"
            android:drawableLeft="@drawable/ic_account_circle_24px"

            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:id="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:layout_marginTop="25dp"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/colorBlack"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxBackgroundColor="@android:color/white"
        app:boxStrokeColor="@color/colorPrimary"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
android:inputType="textPassword"
android:imeOptions="actionDone"
            android:drawableStart="@drawable/ic_lock_open_24px"
            android:drawableLeft="@drawable/ic_lock_open_24px"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="25dp"

            android:text="@string/login"

            android:background="@color/colorPrimary"/>
    </LinearLayout>
</LinearLayout>